@startuml
'https://plantuml.com/class-diagram

hide methods
left to right direction

User <|--  Company
User <|-- Client
User <|-- Producer

User -u-> Basket : > asked for
Basket -u-> Trade : > asked for
Trade -u-> Product : > asked for

class Product {
-product_number
-id_number
-quantity
}

class Trade {
-idProducer
-product
}

class Basket {
-idClient
-received
}

@enduml